Update navigation links to point to homepage temporarily

--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
                         <nav class="primary-menu">
                             <ul class="menu-container">
                                 <li class="menu-item">
-                                    <a class="menu-link" href="ytb-gallery.html"><div>Gallery</div></a>
+                                    <a class="menu-link" href="index.html"><div>Gallery</div></a>
                                 </li>
                                 <li class="menu-item">
-                                    <a class="menu-link" href="ytb-3d-tour.html"><div>3D Floor Plan & Video Tour</div></a>
+                                    <a class="menu-link" href="index.html"><div>3D Floor Plan & Video Tour</div></a>
                                 </li>
                                 <li class="menu-item">
-                                    <a class="menu-link" href="#"><div>Event Packages</div></a>
+                                    <a class="menu-link" href="index.html"><div>Event Packages</div></a>
                                     <ul class="sub-menu-container dark">
                                         <li class="menu-item">
-                                            <a class="menu-link" href="ytb-wedding_form.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
+                                            <a class="menu-link" href="index.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
                                         </li>
                                         <li class="menu-item">
-                                            <a class="menu-link" href="ytb-other_events_form.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
+                                            <a class="menu-link" href="index.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="menu-item mega-menu">
-                                    <a class="menu-link" href="ytb-contact.html"><div>Contact-Schedule Your VIP Tour</div></a>
+                                    <a class="menu-link" href="index.html"><div>Contact-Schedule Your VIP Tour</div></a>
                                 </li>
                             </ul>
                         </nav>
@@ -147,7 +147,7 @@
                             <div class="col-sm-12 col-lg-6">
                                 <div class="feature-box media-box">
                                     <div class="fbox-content px-0">
-                                        <a href="ytb-gallery.html">
+                                        <a href="index.html">
                                             <img src="images/gallerycollage.png" alt="Gallery Collage" style="width: 100%; height: auto;">
                                         </a>
                                     </div>
