--- a/ytb-wedding_form.html
+++ b/ytb-wedding_form.html
@@ -1,183 +1,85 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
-
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="IE=edge">
+    <meta name="author" content="SemiColonWeb">
+    <meta name="description" content="The Social Chapel - Venue">
 
-	<meta http-equiv="content-type" content="text/html; charset=utf-8">
-	<meta http-equiv="x-ua-compatible" content="IE=edge">
-	<meta name="author" content="SemiColonWeb">
-	<meta name="description" content="Get Canvas to build powerful websites easily with the Highly Customizable &amp; Best Selling Bootstrap Template, today.">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
-	<!-- Font Imports -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=PT+Serif:ital@0;1&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.typekit.net/drn4uvf.css">
-	<!-- Core Style -->
-	<link rel="stylesheet" href="style.css">
-
-	<!-- Font Icons -->
-	<link rel="stylesheet" href="css/font-icons.css">
-
-	<!-- Plugins/Components CSS -->
-	<link rel="stylesheet" href="css/swiper.css">
-
-	<!-- Custom CSS -->
-	<link rel="stylesheet" href="css/custom.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<!-- Document Title
-	============================================= -->
-	<title>Wedding Packages | Yours Truly Ballroom</title>
-
+    <!-- Font Imports -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=PT+Serif:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/drn4uvf.css">
+    <!-- Core Style -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Font Icons -->
+    <link rel="stylesheet" href="css/font-icons.css">
+    <!-- Plugins/Components CSS -->
+    <link rel="stylesheet" href="css/swiper.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/custom.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Venue | The Social Chapel</title>
 </head>
-<style>
-		@media (max-width: 767px) {
-		.body-container {
-			margin: 0 0 0 0;
-			width: 100% !important;
 
-		}
-
-		.eb-container {
-			width: 100%;
-		}
-
-		.image-container {
-			width: 100% !important;
-		}
-
-		.mockup {
-			width: 390px;
-			margin-top: 40px;
-		}
-
-		.swap-on-mobile {
-			display: flex !important;
-			flex-direction: column-reverse;
-			background-color:#212529 !important;
-		}
-	}
-
-	@media (min-width: 768px) {
-		.hidden-desktop {
-			display: none;
-		}
-
-		.body-container {
-			margin: 0 auto;
-			width: 1070px;
-			align-items: center;
-		}
-
-		.eb-container {
-			width: 55%;
-			vertical-align: top;
-			background-color:#212529 !important;
-		}
-
-		
-		.image-container {
-			width: 40%;
-			vertical-align: top;
-			padding-left: 3%;
-			display: inline-block;
-			padding-top: 12px;
-		}
-
-		.textblock-mobile {
-			display: none;
-		}
-
-		.mockup {
-			width: 450px;
-			margin-top: 40px;
-		}
-	}
-	
-</style>
 <body class="stretched dark">
+    <div id="wrapper">
 
-	<!-- Document Wrapper
-	============================================= -->
-	<div id="wrapper">
+        <!-- Header -->
+        <header id="header" class="full-header transparent-header">
+            <div id="header-wrap">
+                <div class="container">
+                    <div class="header-row">
 
-		<!-- Header
-		============================================= -->
-		<header id="header" class="full-header transparent-header">
-			<div id="header-wrap">
-				<div class="container">
-					<div class="header-row">
+                        <!-- Logo -->
+                        <div id="logo">
+                            <a href="index.html">
+                                <img class="logo-default" srcset="images/logo.png, images/logo@2x.png 2x" src="images/logo@2x.png" alt="The Social Chapel Logo">
+                            </a>
+                        </div>
 
-						<!-- Logo
-						============================================= -->
-						<div id="logo">
-						</div><!-- #logo end -->
+                        <div class="header-misc"></div>
 
-						<div class="header-misc">
-						</div>
+                        <div class="primary-menu-trigger">
+                            <button class="cnvs-hamburger" type="button" title="Open Mobile Menu">
+                                <span class="cnvs-hamburger-box"><span class="cnvs-hamburger-inner"></span></span>
+                            </button>
+                        </div>
 
-						<div class="primary-menu-trigger">
-							<button class="cnvs-hamburger" type="button" title="Open Mobile Menu">
-								<span class="cnvs-hamburger-box"><span class="cnvs-hamburger-inner"></span></span>
-							</button>
-						</div>
-
-						<!-- Primary Navigation
-						============================================= -->
-						<nav class="primary-menu">
-
-							<ul class="menu-container">
-								<li class="menu-item">
-									<a class="menu-link" href="ytb-calendar.html">
-										<div>Calendar</div>
-									</a>
-
-								</li>
-								<li class="menu-item">
-									<a class="menu-link" href="ytb-gallery.html">
-										<div>Gallery</div>
-									</a>
-
-								</li>
-								<li class="menu-item">
-									<a class="menu-link" href="ourcanvas.html">
-										<div>3D Floor Plan &amp; Video Tour </div>
-									</a>
-
-								</li>
-
-								<li class="menu-item mega-menu">
-									<div id="menu-link">
-										<a href="index.html">
-											<img class="logo-default" srcset="images/logo.png, images/logo@2x.png 2x" src="images/logo@2x.png" alt="Canvas Logo">
-									</div>
-								</li>
-								<li class="menu-item mega-menu">
-									<a class="menu-link" href="ytb-vendors.html">
-										<div> Our Recommended Vendors</div>
-									</a>
-								</li>
-								<li class="menu-item">
-									<a class="menu-link" href="#"><div>Event Packages</div></a>
-									<ul class="sub-menu-container dark">
-										<li class="menu-item">
-											<a class="menu-link" href="ytb-wedding_form.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
-												<li class="menu-item">
-													<a class="menu-link" href="ytb-other_events_form.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>										
-													<li class="menu-item">
-														</li>
-													</ul>
-												</li>
-								<li class="menu-item mega-menu">
-									<a class="menu-link" href="ytb-contact.html">
-										<div>Contact-Schedule Your VIP Tour </div>
-									</a>
-
-								</li>
-							</ul>
-
-						</nav><!-- #primary-menu end -->
+                        <!-- Primary Navigation -->
+                        <nav class="primary-menu">
+                            <ul class="menu-container">
+                                <li class="menu-item">
+                                    <a class="menu-link" href="ytb-gallery.html"><div>Gallery</div></a>
+                                </li>
+                                <li class="menu-item">
+                                    <a class="menu-link" href="ytb-3d-tour.html"><div>3D Floor Plan & Video Tour</div></a>
+                                </li>
+                                <li class="menu-item">
+                                    <a class="menu-link" href="#"><div>Event Packages</div></a>
+                                    <ul class="sub-menu-container dark">
+                                        <li class="menu-item">
+                                            <a class="menu-link" href="ytb-wedding_form.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
+                                        </li>
+                                        <li class="menu-item">
+                                            <a class="menu-link" href="ytb-other_events_form.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu-item mega-menu">
+                                    <a class="menu-link" href="ytb-contact.html"><div>Contact-Schedule Your VIP Tour</div></a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="header-wrap-clone"></div>
+        </header>
 
 
 
