Update wedding form navigation links to point to homepage

--- a/sc-wedding_form.html
+++ b/sc-wedding_form.html
@@ -54,24 +54,24 @@
                         <nav class="primary-menu">
                             <ul class="menu-container">
                                 <li class="menu-item">
-                                    <a class="menu-link" href="ytb-gallery.html"><div>Gallery</div></a>
+                                    <a class="menu-link" href="index.html"><div>Gallery</div></a>
                                 </li>
                                 <li class="menu-item">
-                                    <a class="menu-link" href="ytb-3d-tour.html"><div>3D Floor Plan & Video Tour</div></a>
+                                    <a class="menu-link" href="index.html"><div>3D Floor Plan & Video Tour</div></a>
                                 </li>
                                 <li class="menu-item">
-                                    <a class="menu-link" href="#"><div>Event Packages</div></a>
+                                    <a class="menu-link" href="index.html"><div>Event Packages</div></a>
                                     <ul class="sub-menu-container dark">
                                         <li class="menu-item">
-                                            <a class="menu-link" href="ytb-wedding_form.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
+                                            <a class="menu-link" href="index.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
                                         </li>
                                         <li class="menu-item">
-                                            <a class="menu-link" href="ytb-other_events_form.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
+                                            <a class="menu-link" href="index.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="menu-item mega-menu">
-                                    <a class="menu-link" href="ytb-contact.html"><div>Contact-Schedule Your VIP Tour</div></a>
+                                    <a class="menu-link" href="index.html"><div>Contact-Schedule Your VIP Tour</div></a>
                                 </li>
                             </ul>
                         </nav>
