--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <a class="menu-link" href="index.html"><div>Event Packages</div></a>
                                     <ul class="sub-menu-container dark">
                                         <li class="menu-item">
-                                            <a class="menu-link" href="index.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
+                                            <a class="menu-link" href="sc-wedding_form.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
                                         </li>
                                         <li class="menu-item">
                                             <a class="menu-link" href="index.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
