--- a/sc-wedding_form.html
+++ b/sc-wedding_form.html
@@ -97,17 +97,26 @@
 			<div class="row" style="text-align: center !important;">
 				<p> Download the pricing brochure and discover all the benefits we have for you.</p>
 			</div>
-			<div class="swap-on-mobile" style="width: 100% !important; text-align: center !important;">
-				
-				<div class="eb-container" style="display:inline-block; background:none !important; ">
-
-					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeeF7OSDqC74xyDPKAzX9LGrxt0HAptzydoGb_Re97qPqhaJA/viewform?embedded=true" width="300" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-
+			<div class="row" style="margin-top: 40px;">
+				<!-- Form Container -->
+				<div class="col-md-6 col-12" style="padding-right: 20px;">
+					<div class="eb-container" style="width: 100%; background: none !important;">
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeeF7OSDqC74xyDPKAzX9LGrxt0HAptzydoGb_Re97qPqhaJA/viewform?embedded=true" 
+								width="100%" 
+								height="600" 
+								frameborder="0" 
+								marginheight="0" 
+								marginwidth="0">Loading…</iframe>
+					</div>
 				</div>
-				<div class="image-container">
-					<div style="text-align:center;">
-						<img src="/images/Yourstruly/Wedding-Quincianera-Packages.png" class="Mockup" role="img" style="width: 500px; padding-top:1px; padding-bottom: 100px; ">
+				
+				<!-- Image Container -->
+				<div class="col-md-6 col-12" style="padding-left: 20px;">
+					<div class="image-container" style="text-align: center;">
+						<img src="images/Yourstruly/Wedding-Quincianera-Packages.png" 
+							 class="img-fluid" 
+							 alt="Wedding & Quinceañera Packages Comparison Chart" 
+							 style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
 					</div>
 				</div>
 			</div>
