--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="The Social Chapel - Venue">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico?v=2">
+    <link rel="icon" type="image/png" href="images/favicon.png?v=2">
+    <link rel="shortcut icon" href="images/favicon.ico?v=2">
 
     <!-- Font Imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,7 +68,7 @@
                                             <a class="menu-link" href="sc-wedding_form.html"><div><i class="bi-hypnotize"></i>Weddings & Quinceaneras</div></a>
                                         </li>
                                         <li class="menu-item">
-                                            <a class="menu-link" href="index.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
+                                            <a class="menu-link" href="sc-other_events_form.html"><div><i class="bi-hypnotize"></i>Other Events</div></a>
                                         </li>
                                     </ul>
                                 </li>
@@ -261,7 +263,7 @@
                                     <i class="fa-brands fa-pinterest-p"></i>
                                 </a>
                             </div>
-                            <i class="bi-envelope"></i> Info.withloveyourstruly@gmail.com <span class="middot">&middot;</span> <i class="fa-solid fa-phone"></i> (321) 423-5839 <span class="middot">&middot;</span>
+                            <i class="bi-envelope"></i> Thesocialchapel@gmail.com <span class="middot">&middot;</span> <i class="fa-solid fa-phone"></i> (321) 423-5839 <span class="middot">&middot;</span>
                         </div>
                     </div>
                 </div>
