--- a/ytb-gallery4.html
+++ b/ytb-gallery4.html
@@ -188,7 +188,7 @@
 					<div class="row col-mb-30">
 
 						<div class="col-md-6 text-center text-md-start">
-							Copyrights &copy; Yours Truly Ballroom - All Rights Reserved.<br>
+							Copyrights &copy; The Social Chapel - All Rights Reserved.<br>
 							<div class="copyright-links"><a href="http://majinnmultiservicemastery.com">Powered By</a> / <a href="http://majinnmultiservicemastery.com">MajinnMultiserviceMastery.com</a></div>
 						</div>
 
@@ -226,7 +226,7 @@
 
 							</div>
 
-							<i class="bi-envelope"></i> Info.withloveyourstruly@gmail.com <span class="middot">&middot;</span> <i class="fa-solid fa-phone"></i> (321) 423-5839 <span class="middot">&middot;</span> 
+							<i class="bi-envelope"></i> Thesocialchapel@gmail.com <span class="middot">&middot;</span> <i class="fa-solid fa-phone"></i> (321) 423-5839 <span class="middot">&middot;</span> 
 						</div>
 
 					</div>
